--- a/Basalt.Utility.AssemblyStripper/Basalt.Utility.AssemblyStripper.csproj
+++ b/Basalt.Utility.AssemblyStripper/Basalt.Utility.AssemblyStripper.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Basalt.Framework.Logging" Version="1.1.1" />
+    <PackageReference Include="BepInEx.AssemblyPublicizer" Version="0.4.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+  
 </Project>
